docs/0.5.0/en/components/collaboration.mdx
---
title: Real-time collaboration
description: Attach a synchronized Yjs document to A3S Office editors.
---

# Real-time collaboration

A3S Office exposes a transport-neutral Yjs collaboration boundary. The host
owns rooms, authentication, authorization, network providers, persistence, and
the `Y.Doc`; the editor owns the format-specific binding and interaction.

Markdown, Document, Presentation, Spreadsheet, and PDF have browser editor
bindings. Native Yrs replicas expose the same Yjs v1 state-vector and update
protocol through the CLI and MCP.

## Attach a host transport

`createOfficeCollaborationTransportBinding` is a small reference adapter for a
host-owned room channel. Its envelope binds every message to the protocol
version, artifact ID, artifact kind, namespace, and Yjs client ID. Payloads are
bounded standard Yjs v1 state vectors or updates; incremental updates retain a
validated Office actor/operation origin when one exists.

```ts title="host-room.ts"
import {
  createOfficeCollaborationTransportBinding,
  type OfficeCollaborationTransport,
} from '@a3s-lab/office/core';

const channel: OfficeCollaborationTransport = {
  publish(message) {
    room.publish(message); // Preserve Uint8Array payloads when encoding.
  },
  subscribe(listener) {
    return room.subscribe(listener);
  },
};

const transport = createOfficeCollaborationTransportBinding(session, channel, {
  // Wait until the authenticated room subscription is ready.
  autoSynchronize: false,
});

room.onConnected(() => transport.synchronize());
room.onReconnected(() => transport.synchronize());

// Unsubscribe without destroying the host-owned room or Y.Doc.
transport.destroy();
```

Every peer sends a fresh state vector after its subscription becomes active and
after each reconnect. A peer answers with only the missing update. Repeating
the handshake is safe, and inbound updates are not echoed back into the same
channel. The host still owns delivery guarantees, offline buffering,
authorization, persistence, and room membership. A transport message is not an
authorization token.

## Drive a native coding agent

Native replicas use Yrs with the same protocol roots and standard Yjs v1
updates. A host can run `collab session` as a JSONL live peer while another
agent process makes a typed local change:

```bash
a3s-office collab join .a3s/notes.replica \
  --artifact-id notes --kind markdown --actor-id agent-7 \
  --actor-kind agent --mode edit --operation-id join-1 \
  --input browser-bootstrap.update --json

a3s-office collab session .a3s/notes.replica --poll-ms 100 --json

a3s-office collab mutate .a3s/notes.replica \
  --actor-id agent-7 --artifact-id notes --kind markdown --mode edit \
  --operation-id edit-42 \
  --mutation '{"type":"markdown-splice","indexUtf16":4,"deleteUtf16":0,"insert":" shared"}' \
  --json

a3s-office collab mutate .a3s/report.replica \
  --actor-id agent-7 --artifact-id report --kind document --mode edit \
  --operation-id edit-43 \
  --mutation '{"type":"document-replace-text","search":"Draft","replacement":"Final","expectedMatches":1}' \
  --json

a3s-office collab mutate .a3s/report.replica \
  --actor-id agent-7 --artifact-id report --kind document --mode edit \
  --operation-id edit-44 \
  --mutation '{"type":"document-insert-paragraph","anchorParagraphId":"00000001","position":"after","paragraphId":"00000012","textId":"00000013","text":"Native paragraph"}' \
  --json

a3s-office collab mutate .a3s/application.replica \
  --actor-id agent-7 --artifact-id application --kind pdf --mode edit \
  --operation-id edit-45 \
  --mutation '{"type":"pdf-set-form-value","fieldId":"Applicant.Name","value":"Grace Hopper"}' \
  --json

a3s-office collab mutate .a3s/application.replica \
  --actor-id agent-7 --artifact-id application --kind pdf --mode edit \
  --operation-id annotation-create-1 \
  --mutation '{"type":"pdf-create-annotation","annotationId":"annotation-1","pageIndex":0,"annotation":{"id":"annotation-1","pageIndex":0,"type":9,"rect":{"origin":{"x":68,"y":78},"size":{"width":300,"height":28}},"segmentRects":[{"origin":{"x":68,"y":78},"size":{"width":300,"height":28}}],"strokeColor":"#f59e0b","color":"#f59e0b","opacity":0.48,"contents":"Review this heading"}}' \
  --json

a3s-office collab mutate .a3s/application.replica \
  --actor-id agent-7 --artifact-id application --kind pdf --mode edit \
  --operation-id edit-46 \
  --mutation '{"type":"pdf-propose-redaction","proposalId":"redaction-1","pageIndex":0,"rects":[{"left":10,"top":20,"right":80,"bottom":40}],"proposedAt":"2026-08-15T03:00:00.000Z","reason":"Personal data"}' \
  --json

a3s-office collab mutate .a3s/application.replica \
  --actor-id agent-7 --artifact-id application --kind pdf --mode edit \
  --operation-id edit-47 \
  --mutation '{"type":"pdf-decide-review","decisionId":"decision-1","targetKind":"redaction","targetId":"redaction-1","decision":"approve","createdAt":"2026-08-15T03:05:00.000Z"}' \
  --json
```

The host forwards `session` outbound envelopes to its authenticated room and
delivers room envelopes back with stable host delivery IDs. `mutate` emits a
minimal incremental update through the durable event log, so the running
session publishes changes made by separate CLI or MCP processes. Markdown
offsets are UTF-16 code units, matching browser Yjs; ranges that split a
surrogate pair fail closed. Document replacement edits ProseMirror
`Y.XmlText` directly, may span formatting runs inside that text node, preserves
the first replaced character's marks, and fails unless `expectedMatches`
matches current state; each changed paragraph rotates its Word `textId` once.
`document-insert-paragraph` creates a plain paragraph before or after a stable
paragraph identity in a bounded top-level section, nested list item, table
cell/header, or blockquote path. `document-delete-paragraph` additionally
requires the current `textId` and complete text, preserves required container
blocks and list-leading paragraphs, and refuses inline-atom, comment-mark, and
tracked-change cases. Table-contained edits rotate every identified ancestor
row's `rowTextId` atomically; partial row identities fail before writing. Word
identities are uppercase eight-digit positive 31-bit hexadecimal values.
`document-set-page-color`/`document-clear-page-color` and
`document-set-track-changes`/`document-clear-track-changes` update their
independent typed option fields. Explicit clear variants keep missing set
fields fail-closed. `pdf-set-form-value` updates an existing conflict-local
form `value` leaf or creates the same typed presence/fields/order record used
by browser Yjs. The fully-qualified `fieldId` is bounded to 512 UTF-16 code
units without trimmed whitespace. PDF source bytes remain host-owned, so the
authenticated viewer/save workflow must still verify that the field exists and
is writable. `pdf-create-annotation` accepts a complete portable EmbedPDF
FreeText, Highlight, Underline, StrikeOut, or Ink object and writes a
browser-compatible `source: created` record plus an immutable creation claim.
`pdf-update-annotation` recursively guards changed JSON leaves, so unrelated
browser/native edits merge while a stale edit to the same leaf fails without
an update. ID, source page, and annotation type remain immutable.
`pdf-delete-annotation` verifies those identities and writes an irreversible
tombstone. Use `--mutation-input <file>` for larger or multiline JSON.
`pdf-propose-redaction` appends bounded, positive source-page rectangles and
`pdf-decide-review` appends the only final decision for an existing redaction
or page operation. Both are irreversible audit records with canonical creation
claims. The replica manifest supplies `proposedBy`/`actorId`; caller JSON cannot
forge them. Native timestamps must use canonical UTC, and conflicting ID reuse,
missing targets, or a second final decision fail before any durable update.
`pdf-propose-page-rotation` accepts unique page indices and 90, 180, or 270
clockwise degrees; `pdf-propose-page-deletion` requires a non-empty proper
subset; and `pdf-propose-page-reorder` requires a complete source-page
permutation. These page-operation proposals use the same append-only claim and
replica-attribution rules and never change or synchronize source bytes.

The equivalent MCP tool is `office_collaboration_mutate`; coding agents should
poll `office_collaboration_events` with a persisted `cursorSequence` for
resumable delivery. Typed canonical mutations currently require `edit` mode.
Raw remote updates remain receivable by `view`, `comment`, and `suggest`
replicas so those peers can observe authorized changes; local comment and
suggestion operations stay disabled until their durable review models exist.

An authenticated host may attach a typed source origin to a browser Update.
Native receipts and events preserve that source actor/operation separately
from the host delivery operation ID and re-emit it on live transport. Origin is
audit attribution, not proof of authorization; the host must authenticate it
before delivery.

## Publish ephemeral presence

Pass provider-owned Yjs Awareness to the session, then create one typed
presence controller for that local client. The provider remains responsible
for synchronizing Awareness; the document transport adapter above deliberately
does not persist or relay ephemeral state.

```ts title="shared-presence.ts"
import { Awareness } from 'y-protocols/awareness';
import {
  createOfficeCollaborationPresence,
  createOfficeCollaborationSession,
} from '@a3s-lab/office/core';

const awareness = new Awareness(document);
provider.attachAwareness(awareness);

const session = createOfficeCollaborationSession({
  actor: { id: 'user-42', name: 'Ada', color: '#7c3aed' },
  artifactId,
  awareness,
  document,
  kind: 'spreadsheet',
  mode: 'edit',
});

const presence = createOfficeCollaborationPresence(session);
const unsubscribe = presence.subscribe(({ participants }) => {
  renderParticipants(participants);
});

presence.update({
  activity: 'active',
  location: {
    kind: 'spreadsheet',
    sheetId: 'sheet-1',
    ranges: [
      { startRow: 4, startColumn: 1, endRow: 6, endColumn: 3 },
    ],
    activeCell: { row: 4, column: 1 },
  },
});

unsubscribe();
presence.destroy();
```

Pass that same host-owned controller beside its exact session to any React,
Vue, or Web Component editor. A mismatched artifact, kind, Y.Doc client,
actor, namespace, or mode fails closed instead of showing another room's
participants.

```tsx title="SharedSpreadsheet.tsx"
import { SpreadsheetEditor } from '@a3s-lab/office/react';

<SpreadsheetEditor
  collaboration={session}
  content={initialSnapshot}
  onChange={setSnapshot}
  presence={presence}
/>;
```

Editable status bars and preview/PDF toolbars render one responsive,
keyboard-accessible participant roster. It distinguishes local and remote
humans, agents, and system actors and summarizes activity, mode, and typed
format location. The host still owns the controller lifecycle and Awareness
transport. Each mounted editor publishes its local location and renders remote
locations in its editing surface. Document and Markdown draw text selections
and carets, Spreadsheet uses the native Fortune Sheet cell-presence layer,
Presentation frames stable object IDs, and PDF shows peers on the current page
or annotation. Activating a remote roster row navigates and focuses that
location; passive Awareness changes never move the local viewport, selection,
or focus.

Locations are format-specific: Document uses ProseMirror anchor/head model
positions; Markdown identifies `source` UTF-16 offsets or `visual`
ProseMirror positions (a missing surface remains backward-compatible source
mode); Spreadsheet uses bounded zero-based ranges; Presentation uses one slide
plus stable element IDs; and PDF uses a zero-based page plus an optional
annotation ID. Remote states with the wrong artifact identity, protocol,
actor, mode, or location shape are ignored. Stale locations outside the live
model fail closed. Presence is advisory UI data, not canonical content,
durable audit history, or permission enforcement.

## Open a Markdown session

Initialize only after the provider has completed its initial synchronization.
For a new room, exactly one server or elected bootstrap owner seeds the
artifact. Other clients wait until initialized metadata arrives before mounting
the editor.

```tsx title="SharedMarkdown.tsx"
import * as Y from 'yjs';
import {
  createOfficeCollaborationSession,
  initializeOfficeMarkdownCollaboration,
  type MarkdownContent,
  type OfficeCollaborationSession,
} from '@a3s-lab/office/core';
import { MarkdownEditor } from '@a3s-lab/office/react';

interface OpenMarkdownOptions {
  artifactId: string;
  document: Y.Doc;
  initialContent: MarkdownContent;
  bootstrapOwner: boolean;
}

interface SharedMarkdownProps {
  session: OfficeCollaborationSession;
  initialContent: MarkdownContent;
}

// Call this in the host's provider/session layer after initial sync completes.
export function openMarkdownSession({
  artifactId,
  document,
  initialContent,
  bootstrapOwner,
}: OpenMarkdownOptions) {
  const session = createOfficeCollaborationSession({
    actor: { id: 'user-42', name: 'Ada', kind: 'human' },
    artifactId,
    document,
    kind: 'markdown',
    mode: 'edit',
  });
  if (bootstrapOwner) {
    initializeOfficeMarkdownCollaboration(session, initialContent);
  }
  return session;
}

export function SharedMarkdown({
  session,
  initialContent,
}: SharedMarkdownProps) {
  return (
    <MarkdownEditor
      key={`${session.artifactId}:${session.document.clientID}`}
      collaboration={session}
      content={initialContent}
      onChange={(snapshot) => reportSnapshot(snapshot)}
    />
  );
}
```

The example assumes the component renders only after the session has
initialized metadata. `initializeOfficeMarkdownCollaboration` is idempotent
after a synchronized initialization, but intentionally reports concurrent
independent seeds as an error.

## Open a Document session

Document uses a ProseMirror `Y.XmlFragment` for structured content and
conflict-local maps for document options, comment threads, and bibliography
sources. Initialize after provider sync just like Markdown:

```tsx title="SharedDocument.tsx"
import {
  createOfficeCollaborationSession,
  initializeOfficeDocumentCollaboration,
  type DocumentContent,
} from '@a3s-lab/office/core';
import { DocumentEditor } from '@a3s-lab/office/react';

const session = createOfficeCollaborationSession({
  actor: { id: 'user-42', name: 'Ada', kind: 'human' },
  artifactId,
  document: provider.doc,
  kind: 'document',
  mode: 'edit',
});

if (bootstrapOwner) {
  initializeOfficeDocumentCollaboration(session, initialContent);
}

export function SharedDocument({
  initialContent,
}: {
  initialContent: DocumentContent;
}) {
  return (
    <DocumentEditor
      key={`${session.artifactId}:${session.document.clientID}`}
      collaboration={session}
      content={initialContent}
      onChange={(snapshot) => reportSnapshot(snapshot)}
    />
  );
}
```

The fragment includes the structured section layout, comment anchors, and
tracked-change marks. Comment thread bodies/replies and bibliography sources
are stored by stable ID, so independent records can merge without replacing a
document-sized JSON value. Append-only creation claims make identical offline
retries idempotent and reject conflicting assignments of the same stable ID
after synchronization. Unsupported OOXML package parts remain the host's
import/export responsibility and must not be projected into Yjs as a full ZIP
replacement.

## Open a Presentation session

Presentation stores slide/master/layout order separately from ID-keyed records.
Each slide and design record owns ID-keyed scene objects; comments also merge by
stable ID. Scalar geometry, styles, notes, transitions, charts, and other
JSON-compatible object fields update independently instead of replacing one
serialized deck:

```tsx title="SharedPresentation.tsx"
import {
  createOfficeCollaborationSession,
  initializeOfficePresentationCollaboration,
  type PresentationContent,
} from '@a3s-lab/office/core';
import { PresentationEditor } from '@a3s-lab/office/react';

const session = createOfficeCollaborationSession({
  actor: { id: 'user-42', name: 'Ada', kind: 'human' },
  artifactId,
  document: provider.doc,
  kind: 'presentation',
  mode: 'edit',
});

if (bootstrapOwner) {
  initializeOfficePresentationCollaboration(session, initialContent);
}

export function SharedPresentation({
  initialContent,
}: {
  initialContent: PresentationContent;
}) {
  return (
    <PresentationEditor
      key={`${session.artifactId}:${session.document.clientID}`}
      collaboration={session}
      content={initialContent}
      onChange={(snapshot) => reportSnapshot(snapshot)}
    />
  );
}
```

The binding applies `previous -> next` differences to shared records. A stale
host snapshot therefore cannot delete a slide or object that arrived remotely
unless the local operation explicitly removed that stable ID. Local undo/redo
tracks only the mounted binding's origin.

## Open a Spreadsheet session

Spreadsheet uses ordered, ID-keyed records for sheets and named ranges plus
sparse, recursively field-addressed cells. Formula, style, number-format,
hyperlink, and note fields can therefore merge without replacing a dense
worksheet or serialized workbook:

```tsx title="SharedSpreadsheet.tsx"
import {
  createOfficeCollaborationSession,
  initializeOfficeSpreadsheetCollaboration,
  type SpreadsheetContent,
} from '@a3s-lab/office/core';
import { SpreadsheetEditor } from '@a3s-lab/office/react';

const session = createOfficeCollaborationSession({
  actor: { id: 'user-42', name: 'Ada', kind: 'human' },
  artifactId,
  document: provider.doc,
  kind: 'spreadsheet',
  mode: 'edit',
});

if (bootstrapOwner) {
  initializeOfficeSpreadsheetCollaboration(session, initialContent);
}

export function SharedSpreadsheet({
  initialContent,
}: {
  initialContent: SpreadsheetContent;
}) {
  return (
    <SpreadsheetEditor
      key={`${session.artifactId}:${session.document.clientID}`}
      collaboration={session}
      content={initialContent}
      onChange={(snapshot) => reportSnapshot(snapshot)}
    />
  );
}
```

Sheet activation, cell selection, zoom, calculation caches, and derived chart
previews are local view state. They are not persisted in canonical Yjs content
and remain stable when a remote workbook update is projected into the editor.
Canonical edits and undo/redo use the collaboration binding; one client cannot
undo another client's transaction.

### Mutate one Spreadsheet cell from Rust, CLI, or MCP

Native clients should use the closed `spreadsheet-set-cell` and
`spreadsheet-delete-cell` mutations instead of constructing Yjs fields. Rows
and columns are zero-based, and `sheetId` is the stable sheet identity rather
than its display name:

```json
{
  "type": "spreadsheet-set-cell",
  "sheetId": "sheet-data",
  "row": 1,
  "column": 0,
  "expectedCell": { "v": 10, "m": "10", "ct": { "fa": "0.00", "t": "n" } },
  "nextCell": { "v": 12, "m": "12", "f": "=6*2", "ct": { "fa": "0.00", "t": "n" } }
}
```

The set mutation recursively compares the observed and next cells with the
current shared cell. It writes only changed leaves, so a concurrent note or
style can merge with a value/formula edit; a stale change to the same leaf
fails before any durable update. Pass `expectedCell: null` only to create a
coordinate that was observed blank. Delete supplies the exact complete current
cell:

```json
{
  "type": "spreadsheet-delete-cell",
  "sheetId": "sheet-data",
  "row": 1,
  "column": 0,
  "expectedCell": { "v": 12, "m": "12", "f": "=6*2", "ct": { "fa": "0.00", "t": "n" } }
}
```

Dense worksheets retain their matrix dimensions and safely extend row lengths
when needed. Sparse worksheets stay in `celldata` mode, and the first write to
an empty worksheet also uses the sparse projection. The native boundary checks
Excel coordinate limits, sheet identity, projection consistency, cell JSON
depth and size, unsafe object keys, malformed fields, and orphaned cell state
before writing.

## Open a PDF session

PDF collaboration never places the source PDF bytes in Yjs. The bootstrap
owner supplies an immutable lowercase SHA-256 digest, exact byte length, and
page count, then initializes typed overlay and audit records:

```ts title="shared-pdf.ts"
import {
  createOfficeCollaborationSession,
  createPdfCollaborationContent,
  initializeOfficePdfCollaboration,
} from '@a3s-lab/office/core';

const session = createOfficeCollaborationSession({
  actor: { id: 'reviewer-42', name: 'Ada', kind: 'human' },
  artifactId,
  document: provider.doc,
  kind: 'pdf',
  mode: 'edit',
});

if (bootstrapOwner) {
  initializeOfficePdfCollaboration(
    session,
    createPdfCollaborationContent({
      sha256: sourceSha256,
      byteLength: sourceBytes.byteLength,
      pageCount,
    }),
  );
}
```

Mount the initialized session with the exact source bytes. The viewer verifies
the SHA-256 digest, byte length, and PDFium page count before accepting edits:

```tsx title="SharedPdf.tsx"
import { PdfViewer } from '@a3s-lab/office/react';

export function SharedPdf() {
  return (
    <PdfViewer
      key={`${session.artifactId}:${session.document.clientID}`}
      collaboration={session}
      loadSource={() => Promise.resolve(sourceBlob)}
      onCollaborationChange={(snapshot) => reportSnapshot(snapshot)}
      onSave={async (pdf) => persistMergedPdf(pdf)}
    />
  );
}
```

Annotations and form values are locally undoable. Annotation deletion is a
durable tombstone. Signature placements, redaction proposals, reviewed page
operations, and final decisions are append-only audit records and are never
put on the undo stack. Signature records refer to a host-owned asset ID and
hash rather than synchronizing private appearance bytes. Rendered bitmaps,
search indexes, current page, zoom, and selection remain local. The viewer
captures source annotations and form values as an immutable baseline, then
projects only shared overlays. Local history is Yjs-owned, so the embedded
viewer cannot undo a remote transaction or create a duplicate undo step.
`onSave` still persists the complete PDF `Blob`; collaboration does not
synchronize source bytes or replace the host's save/versioning contract.

The browser projection supports the five annotation tools exposed by the
editor: free text, highlight, underline, strikeout, and ink. Stamp, signature,
and other annotation kinds that require binary creation context fail closed
until the host asset port is implemented. Shared form records must name an
existing writable PDF field.

## Contract

| Concern | Behavior |
| --- | --- |
| Authority | While `collaboration` is present, the shared document is canonical. The required `content` prop is a host snapshot and does not overwrite it. |
| Initial sync | The host finishes provider sync and initialization before mounting. The editor does not guess whether an empty document is new or still downloading. |
| Session identity | A mounted editor accepts one session object. Remount it when the artifact or `Y.Doc` changes. |
| Undo/redo | Tracks only transactions created by this local binding; remote edits remain intact. |
| Modes | `edit` can change Markdown, Document, Presentation, Spreadsheet, or PDF content. `view`, `comment`, and `suggest` remain read-only until each format's durable authorization/review model is complete. |
| Lifecycle | Destroying a session destroys only a `Y.Doc` created by that session. Provider/host-owned documents remain alive. |
| Transport | Any provider that synchronizes standard Yjs v1 updates can own the document. Office does not depend on a specific provider. |
| Authorization | Session modes guard client capabilities but are not a security boundary. The synchronization service must authorize updates. |
| Awareness | One controller owns the `a3sOffice` field and exposes validated actor, mode, activity, and format-specific location snapshots. Providers synchronize it. All editors publish local locations, project remote locations into their native canvas, expose participant navigation, and keep passive updates focus-neutral. |
| Extensions | Collaborative Documents accept behavior-only TipTap `Extension` values. Custom Nodes, Marks, global attributes, and extension kits require a versioned Office schema migration and are rejected. |

`onChange` receives complete snapshots for local and remote shared changes. Use
Yjs updates for durable collaboration persistence; do not turn every snapshot
back into a full-document write.

## Vue and Web Components

Vue exposes the same session as the `collaboration` prop:

```vue
<MarkdownEditor
  :collaboration="session"
  :content="content"
  @change="handleSnapshot"
/>

<DocumentEditor
  :collaboration="documentSession"
  :content="documentContent"
  @change="handleDocumentSnapshot"
/>

<PresentationEditor
  :collaboration="presentationSession"
  :content="presentationContent"
  @change="handlePresentationSnapshot"
/>

<SpreadsheetEditor
  :collaboration="spreadsheetSession"
  :content="spreadsheetContent"
  @change="handleSpreadsheetSnapshot"
/>

<PdfViewer
  :collaboration="pdfSession"
  :load-source="loadPdfSource"
  @collaboration-change="handlePdfSnapshot"
/>
```

Custom elements accept complex values through JavaScript properties:

```ts
const editor = document.querySelector('a3s-markdown-editor');
editor.collaboration = session;
editor.content = content;

const documentEditor = document.querySelector('a3s-document-editor');
documentEditor.collaboration = documentSession;
documentEditor.content = documentContent;

const presentationEditor = document.querySelector('a3s-presentation-editor');
presentationEditor.collaboration = presentationSession;
presentationEditor.content = presentationContent;

const spreadsheetEditor = document.querySelector('a3s-spreadsheet-editor');
spreadsheetEditor.collaboration = spreadsheetSession;
spreadsheetEditor.content = spreadsheetContent;

const pdfViewer = document.querySelector('a3s-pdf-viewer');
pdfViewer.collaboration = pdfSession;
pdfViewer.loadSource = loadPdfSource;
pdfViewer.addEventListener('collaboration-change', handlePdfSnapshot);
```

Do not serialize the session or a `Y.Doc` into an HTML attribute.
